--- a/Bellabeat Case Study.Rmd
+++ b/Bellabeat Case Study.Rmd
@@ -7,8 +7,9 @@ fontsize: 16pt
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+options(repos = list(CRAN="http://cran.rstudio.com/"))
 ```
+
 
 ### **Statement of Business Task**:
 
@@ -137,18 +138,22 @@ summarize(daily_userData)
 ##### Looking for trends in user data. Using sql to focus on the relationship between activity type and calories burned and sleep quality with activity type.
 
 ```{r}
-sqldf('SELECT Id, Date, Calories, TotalSteps, TotalDistance, TrackerDistance, LoggedActivitiesDistance,
+Activity <-sqldf('SELECT Id, Date, Calories, TotalSteps, TotalDistance, TrackerDistance, LoggedActivitiesDistance,
 (VeryActiveDistance+ModeratelyActiveDistance+LightActiveDistance) AS TotalActivity, (VeryActiveMinutes+FairlyActiveMinutes+LightlyActiveMinutes)/60 AS TotalTimeActive
 
 FROM daily_userData
 
 WHERE TotalActivity <> 0 AND  TotalTimeActive <> 0')
+
+head(Activity)
 ```
 
 ```{r}
-sqldf('SELECT Id,Date,Calories, TotalSleepRecords, TotalMinutesAsleep, TotalTimeInBed, TotalSteps, TotalDistance, TrackerDistance, LoggedActivitiesDistance, (VeryActiveDistance+ModeratelyActiveDistance+LightActiveDistance) AS TotalActivity, SedentaryActiveDistance, (VeryActiveMinutes+FairlyActiveMinutes+LightlyActiveMinutes)/60 AS TimeActive, SedentaryMinutes/60 AS TimeSedentary
+Sleep <-sqldf('SELECT Id,Date,Calories, TotalSleepRecords, TotalMinutesAsleep, TotalTimeInBed, TotalSteps, TotalDistance, TrackerDistance, LoggedActivitiesDistance, (VeryActiveDistance+ModeratelyActiveDistance+LightActiveDistance) AS TotalActivity, SedentaryActiveDistance, (VeryActiveMinutes+FairlyActiveMinutes+LightlyActiveMinutes)/60 AS TimeActive, SedentaryMinutes/60 AS TimeSedentary
 
 FROM daily_userData')
+
+head(Sleep)
 ```
 
 #### Visualizations
